--- a/docassemble/VTFeeWaiver/data/questions/VT_fee_waiver.yml
+++ b/docassemble/VTFeeWaiver/data/questions/VT_fee_waiver.yml
@@ -62,6 +62,7 @@ objects:
   - real_estate: DAList.using(object_type=DAObject, complete_attribute="complete", ask_number=True)
   - other_assets: DAList.using(object_type=DAObject, complete_attribute="complete", ask_number=True)
   - jobs: ALItemizedJobList.using(complete_attribute="complete", ask_number=True)
+  - other_incomes: ALIncomeList
 ---
 sections:
   - intro: Is this interview right for you
@@ -90,6 +91,12 @@ code: |
   nav.set_section('intro')
   important_notes_to_user
   #user_ask_role
+  
+  if other_incomes.selected_types.any_true():
+    other_incomes.there_are_any = True
+    other_incomes.gathered
+  #list_other_income
+    
   nav.set_section('case_info')
   case_name
   
@@ -105,7 +112,7 @@ code: |
     employed
     jobs.gather()
     review_jobs
-    list_other_income
+
     users1_income_monthly_total
     users1_income_annual_total
     user_sees_income_total
@@ -185,8 +192,47 @@ code: |
   VT_fee_waiver_download
 ---
 
+---
+id: are there other incomes
+#other_incomes
+question: |
+  Do you have other incomes?
+fields:
+  - Do you have any of these incomes?: other_incomes.selected_types
+    datatype: checkboxes
+    choices:
+      - Unemployment: unemployment_income
+      - Child support: child_support_income
+      - Rental income: rental_income
+      - Annuities: annuities_income
+      - Retirement/pension: retirement_income
+      - Workers compensation or disability insurance: workers_comp_income
+      - Social Security benefits: social_security_income
+      - Veterans benefits: veterans_income
+      - Interest or dividend income: interest_income
+      - Gifts or prize money (including lottery): gifts_income        
+      - Spousal maintenance (from other party in this court action): alimony_from_OP_income
+      - Spousal maintenance (from someone else): alimony_from_other_income     
+      - Other (for example, capital gains on stocks): other_income  
+---
+variable name: non_wage_income_terms
+data: !!omap
+  - SSR: "Social Security Retirement Benefits"
+      - Unemployment: unemployment_income
+      - Child support: child_support_income
+      - Rental income: rental_income
+      - Annuities: annuities_income
+      - Retirement/pension: retirement_income
+      - Workers compensation or disability insurance: workers_comp_income
+      - Social Security benefits: social_security_income
+      - Veterans benefits: veterans_income
+      - Interest or dividend income: interest_income
+      - Gifts or prize money (including lottery): gifts_income        
+      - Spousal maintenance (from other party in this court action): alimony_from_OP_income
+      - Spousal maintenance (from someone else): alimony_from_other_income     
+      - Other (for example, capital gains on stocks): other_income  
 
-
+---
 id: are you employed
 question: |
   Are you employed?
@@ -1161,6 +1207,14 @@ review:
       % for job in jobs:
       * ${ job.source } at ${ job.employer.name }
       % endfor      
+      
+      
+  - Edit: which_other_incomes
+    button: |
+      Other kinds of income
+      
+      ${ other_incomes.sources() }
+      
   - Edit: user_income_unemployment
     button: |
       **Unemployment benefits**:
